--- a/index.html
+++ b/index.html
@@ -9,32 +9,32 @@
   </head>
   <body>
     <div class="game-container">
+      <div class="boxes" id="0">
+        <div class="symbol"></div>
+      </div>
       <div class="boxes" id="1">
         <div class="symbol"></div>
       </div>
-      <div class="boxes" id="2">
+      <div class="boxes right" id="2">
         <div class="symbol"></div>
       </div>
-      <div class="boxes right" id="3">
+      <div class="boxes" id="3">
         <div class="symbol"></div>
       </div>
       <div class="boxes" id="4">
         <div class="symbol"></div>
       </div>
-      <div class="boxes" id="5">
+      <div class="boxes right" id="5">
         <div class="symbol"></div>
       </div>
-      <div class="boxes right" id="6">
+      <div class="boxes bottom" id="6">
         <div class="symbol"></div>
       </div>
       <div class="boxes bottom" id="7">
         <div class="symbol"></div>
       </div>
-      <div class="boxes bottom" id="8">
+      <div class="boxes right bottom" id="8">
         <div class="symbol"></div>
-      </div>
-      <div class="boxes right bottom" id="9">
-        <div class="symbol">X</div>
       </div>
     </div>
   </body>
