add pop-up window

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <script defer src="./script.js"></script>
   </head>
   <body>
+    <div class="modal-window">
+      <h2>Warning!!!</h2>
+      <hr />
+      <div class="modal-body">
+        <p>Please save your time and don't even think you're smart.</p>
+        <h1>I'M SMARTER THAN YOU! HA-HA-HA!!!</h1>
+        <p>Wana try me? Chose :</p>
+        <div class="btns">
+          <button class="btn btnX">X</button>
+          <span> OR </span>
+          <button class="btn btnO">O</button>
+        </div>
+      </div>
+    </div>
+
     <div class="game-container">
       <div class="boxes" id="0">
         <div class="symbol"></div>
@@ -37,5 +52,6 @@
         <div class="symbol"></div>
       </div>
     </div>
+    <div class="overlay"></div>
   </body>
 </html>
